kubernetes/clusters/home/4-apps/media/immich/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
  namespace: media

  labels:
    app: immich

spec:
  replicas: 1

  selector:
    matchLabels:
      app: immich

  template:
    metadata:
      labels:
        app: immich

    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000

      containers:
        - name: immich
          image: ghcr.io/immich-app/immich-server:release
          imagePullPolicy: Always

          ports:
            - containerPort: 2283

          volumeMounts:
            - name: immich-data
              mountPath: /usr/src/app/upload

          resources:
            requests:
              cpu: 500m
              memory: 1Gi
              ephemeral-storage: "2Gi"
            limits:
              cpu: "2"
              memory: 3Gi
              ephemeral-storage: "30Gi"

          readinessProbe:
            httpGet:
              path: /server-info/ping
              port: 2283
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /server-info/ping
              port: 2283
            initialDelaySeconds: 30
            periodSeconds: 15

      volumes:
        - name: immich-data
          persistentVolumeClaim:
            claimName: immich-data
