kubernetes/clusters/home/4-apps/media/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  namespace: media

  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - immich.alarlab.dev
      secretName: wildcard-alarlab-tls

  rules:
    - host: immich.alarlab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-service
                port:
                  number: 2283
